monitoring/prometheus/3-prometheus-deployment-template.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels: &Labels
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/part-of: monitoring-stack
    app.kubernetes.io/managed-by: none
  name: prometheus
  namespace: monitoring
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *Labels
  template:
    metadata:
      labels: *Labels
    spec:
      serviceAccountName: prometheus
      containers:
        - name: prometheus
          image: prom/prometheus:v2.24.0
          args:
            - '--config.file=/etc/prometheus/prometheus.yml'
            - '--storage.tsdb.path=/data/'
            - '--storage.tsdb.retention=30d'
            - '--web.external-url=http://localhost:9090'
            - '--web.enable-admin-api'
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config
              mountPath: /etc/prometheus/
            - name: prometheus-data
              mountPath: /data/
          resources:
            limits:
              memory: "2Gi"
          securityContext:
            runAsUser: 0
      volumes:
        - name: prometheus-data
          persistentVolumeClaim:
            claimName: prometheus-data-pvc
        - name: prometheus-config
          configMap:
            defaultMode: 420
            name: prometheus-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/part-of: monitoring-stack
    app.kubernetes.io/managed-by: none
  name: prometheus
  namespace: monitoring
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path:   /
    prometheus.io/port:   '9090'
spec:
  ports:
    - port: 9090
      name: web
  selector:
    app.kubernetes.io/name: prometheus
#---
#apiVersion: traefik.containo.us/v1alpha1
#kind: Middleware
#metadata:
#  labels:
#    app.kubernetes.io/name: prometheus
#    app.kubernetes.io/instance: prometheus
#    app.kubernetes.io/component: prometheus
#    app.kubernetes.io/part-of: monitoring-stack
#    app.kubernetes.io/managed-by: none
#  name: prometheus-basicauth
#  namespace: monitoring
#spec:
#  basicAuth:
#    secret: prometheus-basic-auth-secret
#---
#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  labels:
#    app.kubernetes.io/name: prometheus
#    app.kubernetes.io/instance: prometheus
#    app.kubernetes.io/component: prometheus
#    app.kubernetes.io/part-of: monitoring-stack
#    app.kubernetes.io/managed-by: none
#  name: prometheus
#  namespace: monitoring
#  annotations:
#    kubernetes.io/ingress.class: traefik
#    traefik.ingress.kubernetes.io/router.entrypoints: websecure
#    traefik.ingress.kubernetes.io/router.middlewares: monitoring-prometheus-basicauth@kubernetescrd
#spec:
#  rules:
#    - host: prometheus.hdi-dev.mgm-edv.de
#      http:
#        paths:
#          - backend:
#              serviceName: prometheus
#              servicePort: web
